# ScyllaHide

./: .editorconfig  .gitignore  ScyllaHide.sln
InjectorCLI/: ApplyHooking.cpp  Icon.rc  InjectorCLI.vcxproj  InjectorCLI.vcxproj.filters  RemoteHook.h  resource.h
PluginGeneric/: AttachDialog.cpp  Injector.h  OptionsDialog.cpp
SCMRevGen/: CMakeLists.txt  make_scmrev.h.bat
Scylla/: CMakeLists.txt  Logger.cpp  Logger.h  NtApiShim.h  OsInfo.cpp  OsInfo.h  Peb.cpp  Peb.h  PebHider.cpp  Resource.h  Scylla.vcxproj  Settings.cpp  Util.cpp  Util.h  Version.cpp  Version.h
ScyllaHideIDAProPlugin/: IdaServerClient.cpp  IdaServerClient.h  ScyllaHideIDAProPlugin.cpp  ScyllaHideIDAProPlugin.rc  ScyllaHideIDAProPlugin.vcxproj
ScyllaHideIDAServer/: Icon.rc  IdaServerExchange.h  idaserver.cpp  idaserver.h
ScyllaHideOlly1Plugin/: ScyllaHideOlly1Plugin.cpp  ScyllaHideOlly1Plugin.rc  ScyllaHideOlly1Plugin.vcxproj  olly1patches.cpp  olly1patches.h  resource.h
ScyllaHideOlly2Plugin/: ScyllaHideOlly2Plugin.rc
ScyllaHideX64DBGPlugin/: ScyllaHideX64DBGPlugin.rc
ScyllaTest/: ScyllaTest.vcxproj  main.cpp
